<resources>
    <string name="app_name">Pontim</string>
    <string name="ADD_BUTTON_STRING">Add</string>
    <string name="CHECKOFF_BUTTON_STRING">Checkoff</string>
    <string name="HISTORY_BUTTON_STRING">History</string>
    <string name="EDIT_BUTTON_STRING">Edit</string>
    <string name="ACCEPT_BUTTON_STRING">Accept</string>
    <string name="CANCEL_BUTTON_STRING">Close</string>
    <string name="POPUP_ADD_HINT">Enter Task Name</string>
    <string name="POPUP_HISTORY_TEXT">History</string>
    <string name="FUNCTION_POPUP_DELETE_TEXT">Delete</string>
    <string name="FUNCTION_POPUP_SETTINGS_TEXT">Settings</string>
    <string name="FUNCTION_POPUP_CLOSE_TEXT">Close</string>
    <string name="RECURSION_TEXT">Task Recursion</string>
    <string name="USER_TEXT">User</string>
    <string name="ICON_TEXT">Icon for selected user</string>
    <string name="EMAIL_TEXT">Email</string>
    <string name="FIRST_NAME_TEXT">First Name</string>
    <string name="LAST_NAME_TEXT">Last Name</string>
    <string name="USERNAME_TEXT">UserName</string>
    <string name="PASSWORD_TEXT">Password</string>
    <string name="LOGIN_TEXT">Login</string>
    <string name="REGISTER_TEXT">Register</string>
    <string name="FORGOT_TEXT">Forgot UserName or Password?</string>
    <string name="DEADLINE_TEXT">Deadline</string>
    <string name="SUNDAY_TEXT">Sunday</string>
    <string name="MONDAY_TEXT">Monday</string>
    <string name="TUESDAY_TEXT">Tuesday</string>
    <string name="WEDNESDAY_TEXT">Wednesday</string>
    <string name="THURSDAY_TEXT">Thursday</string>
    <string name="FRIDAY_TEXT">Friday</string>
    <string name="SATURDAY_TEXT">Saturday</string>
    <string name="DATE_SELECTION_TEXT">Recurring Days</string>
    <string name="ADD_USER_TEXT">Add User</string>
    <string name="USER_MENU_TITLE">Users</string>
    <string name="LIST_MENU_TITLE">Lists</string>
    <string name="SEARCH_TEXT">Search Users</string>
    <string name="LOGO_TEXT">Logo</string>
    <string name="INCORRECT_TEXT"><font fgcolor='#FF0000'>Incorrect username or password</font></string>
    <string name="SOMETHING_TEXT">Something went wrong</string>
    <string name="LIST_TEXT">List of Lists</string>
    <string name="ADD_LIST_TEXT">New List...</string>
    <string name="EDIT_LIST_TEXT">Edit List Name...</string>
    <string name="DELETE_LIST_TEXT">Delete List...</string>
    <string-array name="MINUTES_TEXT">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>
    <string-array name="HOUR_TEXT">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="AM_PM_TEXT">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="DAILY_DEADLINE_TEXT">Daily Deadline</string>
    <string name="CLEAR_DEADLINE_TEXT">Clear Deadline</string>
    <!-- This allows the string text to be colored, this may have issues with 2.x or 4.x android systems-->
    <string name="LOGOUT_TEXT"><font fgcolor='#FF0000'>Log out</font></string>
    <string name="CURRENT_DEADLINE_TEXT">Current Deadline: </string>
    <string name="NO_DEADLINE_TEXT">No Deadline</string>
    <string name="NAME_CHANGE_TEXT">Change Task Name</string>
    <string name="CANCEL_TEXT">Cancel</string>
    <string name="NEW_TEASK_NAME_TEXT">New Task Name</string>
    <string name="SAVE_RECURSION_SETTINGS_TEXT">Save</string>
    <string name="CURRENT_RECURRING_DAYS_TEXT">Current Recurring Days: </string>
    <string name="CURRENT_RECURRING_TIME_TEXT">Current Recurring Time: </string>
</resources>