<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="300dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_height="500dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_height="500dp" android:id="@+id/linearLayout3">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Switch
                        android:text="@string/RECURSION_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/RecursionSwitch"
                        android:layout_weight="1" android:textColor="@android:color/white" android:textSize="24sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/DATE_SELECTION_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/RecursionDateTextView"
                        android:layout_weight="1"
                        android:textColor="@android:color/white" android:gravity="center" android:textSize="24sp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/CurrentDaysTextView"
                        android:layout_weight="1" android:textColor="@android:color/white" android:textSize="12sp"/>
                <Switch
                        android:text="@string/SUNDAY_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/SundaySwitch" android:layout_weight="1"
                        android:textSize="24sp" android:textColor="@android:color/white"/>
                <Switch
                        android:text="@string/MONDAY_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/MondaySwitch" android:layout_weight="1"
                        android:textSize="24sp" android:textColor="@android:color/white"/>
                <Switch
                        android:text="@string/TUESDAY_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/TuesdaySwitch" android:layout_weight="1"
                        android:textSize="24sp" android:textColor="@android:color/white"/>
                <Switch
                        android:text="@string/WEDNESDAY_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/WednesdaySwitch" android:layout_weight="1"
                        android:textSize="24sp" android:textColor="@android:color/white"/>
                <Switch
                        android:text="@string/THURSDAY_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/ThursdaySwitch" android:layout_weight="1"
                        android:textSize="24sp" android:textColor="@android:color/white"/>
                <Switch
                        android:text="@string/FRIDAY_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/FridaySwitch" android:layout_weight="1"
                        android:textSize="24sp" android:textColor="@android:color/white"/>
                <Switch
                        android:text="@string/SATURDAY_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/SaturdaySwitch" android:layout_weight="1"
                        android:textSize="24sp" android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteX="16dp">
                <TextView
                        android:text="@string/DAILY_DEADLINE_TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/DailyDeadlineTextView"
                        android:textSize="24sp" android:textStyle="bold" android:gravity="center"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/CurrentTimeTextView"
                        android:textColor="@android:color/white" android:textSize="18sp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/HourSpinner"
                            android:layout_weight="1" android:spinnerMode="dropdown"
                            android:entries="@array/HOUR_TEXT"/>
                    <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/MinuteSpinner"
                            android:layout_weight="1" android:spinnerMode="dropdown"
                            android:entries="@array/MINUTES_TEXT"/>
                    <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/AmPmSpinner"
                            android:layout_weight="1" android:spinnerMode="dropdown"
                            android:entries="@array/AM_PM_TEXT"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                    android:text="@string/SAVE_RECURSION_SETTINGS_TEXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/SaveRecurringSettingsButton"/>
        </LinearLayout>
        <Button
                android:text="@string/CANCEL_BUTTON_STRING"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/CloseRecurringButton"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>