<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/TaskFunctionLinearLayout" android:background="@color/colorPopup">
        <Button
                android:text="@string/FUNCTION_POPUP_DELETE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/FunctionDeleteButton"
        />
        <Button
                android:text="@string/FUNCTION_POPUP_SETTINGS_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/FunctionSettingsButton"
        />
        <Button
                android:text="@string/FUNCTION_POPUP_CLOSE_TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/FunctionCloseButton"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>