<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="500dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" android:layout_marginEnd="16dp">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_weight="1" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginTop="100dp"
                android:hint="@string/NEW_TEASK_NAME_TEXT" android:id="@+id/NewNameText"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="100dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="500dp">
            <Button
                    android:text="@string/NAME_CHANGE_TEXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/ChangeNameButton" android:layout_weight="1"/>
            <Button
                    android:text="@string/CANCEL_TEXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/ChangeNameCancelButton"
                    android:layout_weight="1"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>