<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="300dp" android:layout_height="500dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginStart="16dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/DEADLINE_TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/SettingsDeadlineTitleTextView"
                        android:layout_weight="1"
                        android:gravity="center" android:textSize="24sp" android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <CalendarView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/DeadlineCalendarView"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/CurrentDeadlineTextView"
                        android:layout_weight="1" android:textColor="@android:color/white" android:gravity="center"
                        android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/CLEAR_DEADLINE_TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ClearDeadlineButton"
                        android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <Button
                android:text="@string/CANCEL_BUTTON_STRING"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/closeDeadlineButton"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>