<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity" app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/Icon"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:layout_marginTop="8dp" android:contentDescription="@string/ICON_TEXT"/>
        <TextView
                android:text="@string/USER_TEXT"
                android:layout_width="283dp"
                android:layout_height="52dp"
                android:id="@+id/FLName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="30sp"
                app:fontFamily="sans-serif-medium" android:gravity="clip_vertical|center_horizontal"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/Icon"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/USER_TEXT"
                android:layout_width="283dp"
                android:layout_height="32dp"
                android:id="@+id/UserName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"
                app:fontFamily="sans-serif-medium" android:gravity="clip_vertical|center_horizontal"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/FLName"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:text="@string/LOGOUT_TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Logout"
                app:layout_constraintTop_toBottomOf="@+id/UserName" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>