<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="500dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" android:id="@+id/MainSettingsView">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/taskNameView"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="190dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="189dp" android:textColor="@android:color/white"/>
        <Button
                android:text="@string/CANCEL_BUTTON_STRING"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/CloseButton"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp" android:layout_marginBottom="80dp" android:id="@+id/linearLayout2">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/RecursionButtonLayout">
                <Switch
                        android:text="@string/RECURSION_TEXT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/RecursionSwitch"
                        android:layout_weight="1" android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/DealineTitleLayout">
                <TextView
                        android:text="@string/DEADLINE_TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/DeadlineText" android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="30sp" android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/DateLayout">
                <Spinner
                        android:layout_height="wrap_content" android:id="@+id/YearSpinner" android:layout_weight="1"
                        android:spinnerMode="dropdown" android:layout_width="0dp" android:entries="@array/YEAR_TEXT"
                        android:popupBackground="@android:color/background_light"/>
                <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/MonthSpinner" android:layout_weight="1"
                        android:spinnerMode="dropdown" android:entries="@array/MONTH_TEXT"
                />
                <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/DaySpinner" android:layout_weight="1"
                        android:spinnerMode="dropdown" android:entries="@array/DAY_TEXT"
                />
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/TimeLayout">
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/HourSpinner" android:layout_weight="1"
                        android:entries="@array/HOUR_TEXT"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/MinuteSpinner" android:layout_weight="1"
                        android:entries="@array/MINUTE_TEXT"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/AmPmSpinner" android:layout_weight="1"
                        android:entries="@array/AMPM_TEXT"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/ApplyLayout">
                <Button
                        android:text="@string/APPLY_DEADLINE_TEXT"
                        android:layout_width="match_parent"
                        android:id="@+id/ApplyButton" android:layout_weight="1" android:layout_height="50dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/DealineLayout">
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/DeadlineDisplayText"
                        android:layout_weight="1" android:gravity="center" android:textSize="24sp"
                        android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/ClearDealineLayout">
                <Button
                        android:text="@string/CLEAR_DEADLINE_TEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ClearDeadline" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>